force-app/main/default/objects/cgcloud__Job_Template__c/cgcloud__Job_Template__c.object-meta.xml
<CustomObject>
    <description>Holds if a job has to be handled as a task, a question, a product related question (survey) or any other object related job like capturing orders.</description>
    <label>Job Template</label>
    <nameField>
        <label>Job Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>