force-app/main/default/objects/cgcloud__Job_Template__c/fields/cgcloud__Description_Language_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_2__c</fullName>
    <description>Holds the description of language 2</description>
    <label>Description Language 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>