force-app/main/default/objects/cgcloud__Job_Template__c/fields/cgcloud__Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the survey is about products.
If there is no product reference, then dynamic must be true.</description>
    <inlineHelpText>Check if Product Reference is there.</inlineHelpText>
    <label>Product Reference</label>
    <type>Checkbox</type>
</CustomField>