force-app/main/default/objects/cgcloud__Job_Template__c/listViews/cgcloud__Job_Templates.listView-meta.xml
<ListView>
    <fullName>cgcloud__Job_Templates</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>Job Templates</label>
    <language>en_US</language>
</ListView>